--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ node_modules/
 # Build outputs
 dist/
 build/
+release/
+
+# Electron
+*.log
+*.exe
+*.dmg
+*.AppImage
+*.deb
+*.rpm
 
 # Environment files
 .env
