--- a/package.json
+++ b/package.json
@@ -2,11 +2,28 @@
   "name": "lumina-voyage",
   "version": "1.0.0",
   "type": "module",
+  "main": "electron/main.cjs",
   "description": "Atmospheric Adventure Puzzle Game with Light Physics",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron:build": "npm run build && electron-builder"
+  },
+  "build": {
+    "appId": "com.lumina.voyage",
+    "productName": "Lumina Voyage",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "win": {
+      "target": "portable"
+    }
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
@@ -16,6 +33,10 @@
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
-    "vite": "^5.0.11"
+    "concurrently": "^9.2.1",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
+    "vite": "^5.0.11",
+    "wait-on": "^9.0.3"
   }
 }
