feat: add game icons for browser and desktop app

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
       "electron/**/*"
     ],
     "win": {
-      "target": "portable"
+      "target": "portable",
+      "icon": "public/favicon.ico"
     }
   },
   "dependencies": {
