feat: configure favicon for browser and app icon for Electron

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
       "electron/**/*"
     ],
     "win": {
-      "target": "portable",
-      "icon": "public/favicon.ico"
+      "target": "portable"
     }
   },
   "dependencies": {
