--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
       "electron/**/*"
     ],
     "win": {
-      "target": "portable"
+      "target": "portable",
+      "icon": "public/icons/android-chrome-512x512.png"
     }
   },
   "dependencies": {
